# nanoDT

./: .gitignore  README.md  pyproject.toml
decision_transformer/: model.py  trajectory.py
scripts/: generate_halfcheetah_trajectories.py  generate_pendulum_trajectories.py  train.py
tests/: test_gpt.py
